big data set split done but left augmentation missing

--- a/01_big_dataset_preprocessing.ipynb
+++ b/01_big_dataset_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "4  {'1-PA': {'P13': {'I': [-0.006 -0.003 -0.003 ....  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2747,7 +2747,7 @@
        "   'V6': array([0.018, 0.018, 0.015, ..., 0.039, 0.039, 0.039])}}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2771,7 +2771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2968,7 +2968,7 @@
        "4         NaN             NaN  Unión mitroaórtica       0.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3015,7 +3015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3057,7 +3057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3087,7 +3087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3136,7 +3136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3205,8 +3205,330 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop the Leads column in df_signals, since it is redundant\n",
+    "# All ECGs are preprocessed and saved in preprocessed_ecgs\n",
+    "df_signals = df_signals.drop(columns=['Leads'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique chamber labels found (after Hoja1 + Hoja2 mapping):\n",
+      "- Coronary sinus\n",
+      "- LVOT\n",
+      "- Left ventricle\n",
+      "- Mitral annulus\n",
+      "- RVOT\n",
+      "- Right ventricle\n",
+      "- Tricuspid annulus\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load mapping Excel file\n",
+    "labels_path = \"data/labels_FontiersUnsupervised.xlsx\"\n",
+    "map_hoja1 = pd.read_excel(labels_path, sheet_name=\"Hoja1\")\n",
+    "map_hoja2 = pd.read_excel(labels_path, sheet_name=\"Hoja2\")\n",
+    "\n",
+    "# Build lookup dictionaries\n",
+    "map_1 = dict(zip(map_hoja1[\"SOO\"], map_hoja1[\"SOO_Chamber\"]))\n",
+    "map_2 = dict(zip(map_hoja2[\"SOO\"], map_hoja2[\"SOO_chamber\"]))\n",
+    "\n",
+    "# Step 1: Map SOO from df_signals using Hoja1\n",
+    "simplified_chambers = []\n",
+    "for entry in df_signals[\"SOO\"]:\n",
+    "    if isinstance(entry, str) and entry in map_1:\n",
+    "        simplified_chambers.append(map_1[entry])\n",
+    "    else:\n",
+    "        simplified_chambers.append(\"OTHER\")\n",
+    "\n",
+    "# Step 2: Fill in \"OTHER\" using Hoja2\n",
+    "for i, entry in enumerate(df_signals[\"SOO\"]):\n",
+    "    if simplified_chambers[i] == \"OTHER\" and isinstance(entry, str) and entry in map_2:\n",
+    "        simplified_chambers[i] = map_2[entry]\n",
+    "\n",
+    "# Checked all mapped chamber names before normalization\n",
+    "unique_chambers = sorted(set(simplified_chambers))\n",
+    "print(\"Unique chamber labels found (after Hoja1 + Hoja2 mapping):\")\n",
+    "for label in unique_chambers:\n",
+    "    print(\"-\", label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normalized_label\n",
+      "Right    23675\n",
+      "Left      5478\n",
+      "Name: count, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PatientID</th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>Structure</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>PVC_transition</th>\n",
+       "      <th>SOO_chamber</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>DM</th>\n",
+       "      <th>DLP</th>\n",
+       "      <th>Smoker</th>\n",
+       "      <th>COPD</th>\n",
+       "      <th>Sleep_apnea</th>\n",
+       "      <th>CLINICAL_SCORE</th>\n",
+       "      <th>SOO</th>\n",
+       "      <th>OTorigin</th>\n",
+       "      <th>normalized_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>P186</td>\n",
+       "      <td>P36</td>\n",
+       "      <td>2-LV</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>V1</td>\n",
+       "      <td>Right ventricle</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Unión mitroaórtica</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P186</td>\n",
+       "      <td>P122</td>\n",
+       "      <td>2-LV</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>V1</td>\n",
+       "      <td>Right ventricle</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Unión mitroaórtica</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>P186</td>\n",
+       "      <td>P85</td>\n",
+       "      <td>2-LV</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>V1</td>\n",
+       "      <td>Right ventricle</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Unión mitroaórtica</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>P186</td>\n",
+       "      <td>P103</td>\n",
+       "      <td>2-LV</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>V1</td>\n",
+       "      <td>Right ventricle</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Unión mitroaórtica</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P186</td>\n",
+       "      <td>P86</td>\n",
+       "      <td>2-LV</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>V1</td>\n",
+       "      <td>Right ventricle</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Unión mitroaórtica</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Right</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  PatientID SampleID Structure     Sex   Age PVC_transition      SOO_chamber  \\\n",
+       "0      P186      P36      2-LV  Female  61.0             V1  Right ventricle   \n",
+       "1      P186     P122      2-LV  Female  61.0             V1  Right ventricle   \n",
+       "2      P186      P85      2-LV  Female  61.0             V1  Right ventricle   \n",
+       "3      P186     P103      2-LV  Female  61.0             V1  Right ventricle   \n",
+       "4      P186      P86      2-LV  Female  61.0             V1  Right ventricle   \n",
+       "\n",
+       "   Height  Weight  DM DLP Smoker COPD Sleep_apnea  CLINICAL_SCORE  \\\n",
+       "0   170.0    77.0  No  No     No   No          No             1.0   \n",
+       "1   170.0    77.0  No  No     No   No          No             1.0   \n",
+       "2   170.0    77.0  No  No     No   No          No             1.0   \n",
+       "3   170.0    77.0  No  No     No   No          No             1.0   \n",
+       "4   170.0    77.0  No  No     No   No          No             1.0   \n",
+       "\n",
+       "                  SOO  OTorigin normalized_label  \n",
+       "0  Unión mitroaórtica       0.0            Right  \n",
+       "1  Unión mitroaórtica       0.0            Right  \n",
+       "2  Unión mitroaórtica       0.0            Right  \n",
+       "3  Unión mitroaórtica       0.0            Right  \n",
+       "4  Unión mitroaórtica       0.0            Right  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Normalize chambers to Left / Right / OTHER\n",
+    "def normalize_chamber(label):\n",
+    "    if label in [\"RVOT\", \"Right ventricle\", \"Tricuspid annulus\", \"Coronary sinus\"]:\n",
+    "        return \"Right\"\n",
+    "    elif label in [\"LVOT\", \"Left ventricle\", \"Mitral annulus\"]:\n",
+    "        return \"Left\"\n",
+    "    return \"OTHER\"\n",
+    "\n",
+    "normalized_labels = [normalize_chamber(label) for label in simplified_chambers]\n",
+    "\n",
+    "# Add as new column\n",
+    "df_signals[\"normalized_label\"] = normalized_labels\n",
+    "print(df_signals[\"normalized_label\"].value_counts())\n",
+    "df_signals.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train ECGs shape: (24675, 625, 12)\n",
+      "Test ECGs shape: (4478, 625, 12)\n",
+      "Overlap in PatientIDs: set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split df_signals and corresponding preprocessed_ecgs\n",
+    "# Note that df_signals and preprocessed_ecgs are aligned by index\n",
+    "\n",
+    "from sklearn.model_selection import GroupShuffleSplit\n",
+    "\n",
+    "# Split using PatientID as grouping key\n",
+    "splitter = GroupShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
+    "groups = df_signals[\"PatientID\"].values\n",
+    "X_indices = np.arange(len(df_signals))  # 0 to 29152\n",
+    "\n",
+    "train_idx, test_idx = next(splitter.split(X_indices, groups=groups))\n",
+    "\n",
+    "# Split the signals using the same indices\n",
+    "X_train_ecg = preprocessed_ecgs[train_idx]\n",
+    "X_test_ecg = preprocessed_ecgs[test_idx]\n",
+    "\n",
+    "# Split the metadata accordingly\n",
+    "df_train_meta = df_signals.iloc[train_idx].reset_index(drop=True)\n",
+    "df_test_meta = df_signals.iloc[test_idx].reset_index(drop=True)\n",
+    "\n",
+    "# Confirm shape of the ECG sets\n",
+    "print(\"Train ECGs shape:\", X_train_ecg.shape)\n",
+    "print(\"Test ECGs shape:\", X_test_ecg.shape)\n",
+    "\n",
+    "# Ensure no patient appears in both train and test sets\n",
+    "train_patients = set(df_train_meta[\"PatientID\"])\n",
+    "test_patients = set(df_test_meta[\"PatientID\"])\n",
+    "print(\"Overlap in PatientIDs:\", train_patients & test_patients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
