preprocessing both datasets done

--- a/01_small_dataset_preprocessing.ipynb
+++ b/01_small_dataset_preprocessing.ipynb
@@ -1220,7 +1220,7 @@
    "source": [
     "The training set contains 32 Left samples vs. 112 Right samples, leading to a strong class imbalance. Without correction, the model may learn to favor the dominant class (Right), harming generalization.\n",
     "\n",
-    "To address this, we apply *ata augmentation to the Left class in the training set using:\n",
+    "To address this, we apply data augmentation to the Left class in the training set using:\n",
     "* Gaussian noise addition (simulates measurement noise)\n",
     "* Time shifting (simulates temporal variability)\n",
     "\n",
