feature extraction fixed, but taking too long

--- a/ECG_feature_extraction_per_patient.ipynb
+++ b/ECG_feature_extraction_per_patient.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "19a253f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from sak.signal.interpolate import interp1d\n",
     "import skimage.util\n",
     "import math\n",
     "import scipy.signal as sp\n",
+    "import numpy as np\n",
+    "import torch\n",
     "\n",
     "def predict_ecg(ecg, fs=250, model=None, window_size=2048, stride=256, threshold_ensemble=0.5,\n",
     "                thr_dice=0.9, ptg_voting=0.5, batch_size=16):\n",
@@ -75,7 +76,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def extract_morph_features(signal, mask, fs=250):\n",
     "    features = {}\n",
     "    transition_found = False\n",
@@ -115,8 +115,7 @@
     "        features[f\"t_polarity\"] = polarity\n",
     "\n",
     "    features[\"precordial_transition\"] = precordial_index\n",
-    "    return features\n",
-    "\n"
+    "    return features"
    ]
   },
   {
@@ -133,13 +132,13 @@
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# --- Load signal metadata ---\n",
+    "# Load signal metadata\n",
     "df_signals = pd.read_pickle(\"df_signals_preprocessed.pkl\")  # Contains SampleID, PatientID\n",
     "\n",
-    "# --- Assume you already have the ECGs loaded as a list ---\n",
+    "# Assume you already have the ECGs loaded as a list\n",
     "# ecg_signals_all[i] corresponds to df_signals.iloc[i]['SampleID']\n",
     "\n",
-    "# --- Group ECGs by PatientID ---\n",
+    "# Group ECGs by PatientID\n",
     "patient_ecgs = {}\n",
     "for i, row in df_signals.iterrows():\n",
     "    pid = row.PatientID\n",
@@ -147,7 +146,7 @@
     "        patient_ecgs[pid] = []\n",
     "    patient_ecgs[pid].append(ecg_signals_all[i])\n",
     "\n",
-    "# --- Average ECGs per patient (with shape validation) ---\n",
+    "# Average ECGs per patient (with shape validation)\n",
     "patient_avg_ecgs = {}\n",
     "for pid, ecgs in tqdm(patient_ecgs.items(), desc=\"Averaging ECGs per patient\"):\n",
     "    try:\n",
@@ -161,7 +160,7 @@
     "    except Exception as e:\n",
     "        print(f\"Skipping patient {pid} due to error: {e}\")\n",
     "\n",
-    "# --- Optional: visualize average vs original ECGs for one patient ---\n",
+    "# Visualize average vs original ECGs for one patient\n",
     "def plot_patient_avg_vs_originals(pid, lead_index=6):\n",
     "    if pid not in patient_ecgs or pid not in patient_avg_ecgs:\n",
     "        print(f\"Patient {pid} not found or not averaged.\")\n",
@@ -177,7 +176,7 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
-    "# --- Feature extraction per patient average ECG ---\n",
+    "# Feature extraction per patient average ECG \n",
     "features_list = []\n",
     "for pid, signal in tqdm(patient_avg_ecgs.items(), desc=\"Extracting features\"):\n",
     "    feats_all_leads = {}\n",
@@ -198,14 +197,32 @@
     "    except Exception as e:\n",
     "        print(f\"⚠️ Skipping patient {pid} due to error: {e}\")\n",
     "\n",
-    "# --- Save results ---\n",
+    "# Save results\n",
     "df_feats = pd.DataFrame(features_list)\n",
     "df_feats.to_csv(\"features_per_patient_avg.csv\", index=False)\n",
-    "print(\"✅ Saved features_per_patient_avg.csv with shape:\", df_feats.shape)"
+    "print(\"Saved features_per_patient_avg.csv with shape:\", df_feats.shape)"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "CompBioMed25",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.20"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
