renaming for consistency

--- a/feature_extraction_all.ipynb
+++ b/feature_extraction_all.ipynb
@@ -5,7 +5,7 @@
    "id": "af40b159",
    "metadata": {},
    "source": [
-    "# ECG Feature Extraction (Final Version)\n",
+    "# ECG Feature Extraction\n",
     "\n",
     "This notebook performs feature extraction for multilead ECG signals using prior preprocessing.\n",
     "\n",
