small dataset feature extraction failed

--- a/feature_extraction_all.ipynb
+++ b/feature_extraction_all.ipynb
@@ -307,7 +307,7 @@
     "    features[\"qrs_dur\"] = qrs_dur\n",
     "    features[\"t_polarity\"] = polarity\n",
     "\n",
-    "    return features\n"
+    "    return features"
    ]
   },
   {
