--- a/feature_extraction_all.ipynb
+++ b/feature_extraction_all.ipynb
@@ -482,7 +482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "compbiomed",
+   "display_name": "CompBioMed25",
    "language": "python",
    "name": "python3"
   },
