anova f test done

--- a/01_small_dataset_preprocessing.ipynb
+++ b/01_small_dataset_preprocessing.ipynb
@@ -1277,14 +1277,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n"
+      "/var/folders/gy/5nns71_n7nx_v_2mkns5_k340000gn/T/ipykernel_69581/3481763908.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  models = [torch.load(f\"{model_dir}/model.{i+1}\") for i in range(5)]\n",
+      "/Users/taniapazospuig/anaconda3/envs/CompBioMed25/lib/python3.8/site-packages/timm/models/layers/__init__.py:48: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers\n",
+      "  warnings.warn(f\"Importing from {__name__} is deprecated, please import via timm.layers\", FutureWarning)\n",
+      "/var/folders/gy/5nns71_n7nx_v_2mkns5_k340000gn/T/ipykernel_69581/3481763908.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  models = [torch.load(f\"{model_dir}/model.{i+1}\") for i in range(5)]\n"
      ]
     }
    ],
@@ -1298,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,15 +1540,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting features: 100%|██████████| 144/144 [02:00<00:00,  1.19it/s]\n",
-      "Extracting features: 100%|██████████| 36/36 [00:31<00:00,  1.13it/s]\n"
+      "Extracting features: 100%|██████████| 144/144 [01:22<00:00,  1.74it/s]\n",
+      "Extracting features: 100%|██████████| 36/36 [00:23<00:00,  1.54it/s]\n"
      ]
     }
    ],
@@ -1557,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1774,7 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1860,6 +1865,39 @@
    ],
    "source": [
     "df_train_features.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected features: Index(['lead1_s_amp', 'lead1_r_s_ratio', 'lead2_qrs_dur', 'lead3_qrs_dur',\n",
+      "       'lead4_qrs_dur', 'lead5_qrs_dur', 'lead6_qrs_dur', 'lead7_r_amp',\n",
+      "       'lead7_qrs_dur', 'lead8_s_amp', 'lead8_qrs_dur', 'lead9_r_amp',\n",
+      "       'lead9_qrs_dur', 'lead9_t_polarity', 'lead10_r_amp', 'lead10_qrs_dur',\n",
+      "       'lead11_r_amp', 'lead11_qrs_dur', 'lead12_r_s_ratio', 'lead12_qrs_dur'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import SelectKBest, f_classif\n",
+    "\n",
+    "X_train_feat = df_train_features.drop(columns=['patient_id'])\n",
+    "y_train_labels = y_train\n",
+    "\n",
+    "# Apply ANOVA F-test\n",
+    "selector = SelectKBest(score_func=f_classif, k=20)  # Select top 20 features\n",
+    "X_train_selected = selector.fit_transform(X_train_feat, y_train_labels)\n",
+    "\n",
+    "# Retrieve selected feature names\n",
+    "selected_features = X_train_feat.columns[selector.get_support()]\n",
+    "print(\"Selected features:\", selected_features)"
    ]
   },
   {
