--- a/big_dataset_preprocessing.ipynb
+++ b/big_dataset_preprocessing.ipynb
@@ -3096,16 +3096,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter only left samples for augmentation\n",
-    "df_signals_left = df_signals[df_signals[\"normalized_label\"] == \"Left\"].copy()\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Save filtered dataframe\n",
-    "df_signals_left.to_pickle(\"data/df_signals_left.pkl\")"
+    "# Group ECGs by patient and assign each patieint a representative label with the mode\n",
+    "df_patient_labels = df_signals.groupby(\"PatientID\")[\"normalized_label\"].agg(lambda x: x.mode().iloc[0])\n",
+    "# Remove patients that are labeled as OTHER\n",
+    "df_patient_labels = df_patient_labels[df_patient_labels.isin([\"Left\", \"Right\"])].reset_index()\n",
+    "\n",
+    "# Separate by class\n",
+    "left_patients = df_patient_labels[df_patient_labels[\"normalized_label\"] == \"Left\"]\n",
+    "right_patients = df_patient_labels[df_patient_labels[\"normalized_label\"] == \"Right\"]\n",
+    "\n",
+    "# Undersample right patients to match left patients\n",
+    "right_sampled = right_patients.sample(n=len(left_patients), random_state=42)\n",
+    "\n",
+    "# Combine balanced patient set\n",
+    "df_balanced = pd.concat([left_patients, right_sampled], ignore_index=True)\n",
+    "\n",
+    "# Train-test split (still stratified, but already balanced)\n",
+    "train_df, test_df = train_test_split(df_balanced, stratify=df_balanced[\"normalized_label\"],\n",
+    "                                     test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Get patient IDs for future filtering\n",
+    "train_patient_ids = set(train_df[\"PatientID\"])\n",
+    "test_patient_ids = set(test_df[\"PatientID\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
